--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 
 	<groupId>com.callahanwilliam</groupId>
 	<artifactId>contact-manager</artifactId>
-	<packaging>jar</packaging>
-	<version>${com.callahanwilliam.contactmanager}</version>
+	<packaging>pom</packaging>
+	<version>1.0-SNAPSHOT</version>
 	<contributors>
 		<contributor>
 			<name>William Callahan</name>
@@ -30,8 +30,10 @@
 	<properties>
 		<com.callahanwilliam.contactmanager>1.0-SNAPSHOT</com.callahanwilliam.contactmanager>
 		<com.amazonaws.log4j>1.0.0</com.amazonaws.log4j>
-		<com.amazonaws.dynamodo>1.11.34</com.amazonaws.dynamodo>
+		<com.amazonaws.dynamodo>1.11.250</com.amazonaws.dynamodo>
+		<com.amazonaws.aws.serverless.java.container.spring>0.8</com.amazonaws.aws.serverless.java.container.spring>
 		<com.github.derjust.dynamodb>4.2.3</com.github.derjust.dynamodb>
+		<com.jackson>2.7.5</com.jackson>
 		<lambda.version>0.0.6</lambda.version>
 		<spring.version>4.2.4.RELEASE</spring.version>
 	</properties>
@@ -84,6 +86,12 @@
 			<version>${com.amazonaws.dynamodo}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-lambda-java-log4j</artifactId>
+			<version>${com.amazonaws.log4j}</version>
+		</dependency>
+
 		<!-- endregion -->
 
 		<!-- region Various Dependencies -->
@@ -92,6 +100,12 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-collections4</artifactId>
 			<version>4.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.25</version>
 		</dependency>
 
 		<!-- endregion -->
@@ -122,13 +136,6 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.0.1</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-			<version>1.7.25</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -168,6 +175,16 @@
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.0.2</version>
+				<configuration>
+					<archive>
+					</archive>
 				</configuration>
 			</plugin>
 		</plugins>
