Additional tests and API support

--- a/contact-manager-common/src/main/resources/log4j.properties
+++ b/contact-manager-common/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 # Root Logger
 log4j.debug=true
-log4j.rootLogger=INFO, lambda, stdout
+log4j.rootLogger=TRACE, lambda, stdout
 
 log4j.appender.lambda=com.amazonaws.services.lambda.runtime.log4j.LambdaAppender
 log4j.appender.lambda.layout=org.apache.log4j.PatternLayout
